<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Driver Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="seat_info">Arrange seats, then click here</string>
    <string name="mirror_info">Arrange mirrors, then click here</string>
    <string name="seatbelt_info">Fasten your seat belt, then click here</string>
    <string name="brake_info">Hit the brake</string>
    <string name="lamp_info">Turn on the headlamps</string>
    <string name="handbrake_info">Lower the parking brake</string>
    <string name="gear_info">Put your gear in drive mode or reverse</string>
    <string name="ready">You are ready to go</string>
    <string name="hello_world">Hello world!</string>
    <string name="engine_speed">Engine speed: %1$f RPM</string>
    <string name="ignition_status">Ignition status: %1$s</string>
    <string name="brake_pedal">Brake status: %1$b</string>
    <string name="hand_brake">Hand brake status: %1$b</string>
    <string name="gear_mode">Gear mode status: %1$s</string>
    <string name="headlamp">Headlamp status: %1$b</string>
    <string name="vehicle_speed_info">Vehicle speed: %1$f km/h</string>
    <string name="vehicle_speed">%1$.1f</string>
    <string name="weather">9 °C </string>
    <string name="handbrake_warning">Release parking brake!</string>
    <string name="safety_warning">Safety Warning!</string>
    <string name="emission_warning">Emission Warning!</string>
    <string name="headlamp_warning">Open headlamps!</string>
    <string name="brake_acc_warning">Don\'t press brake and gas pedal at the same time!</string>
    <string name="aggressive_acc_warning">Aggressive Acceleration!</string>
    <string name="end_trip">END TRIP</string>
    <string name="safety_and_emission_warning">Safety and Emission Warning!</string>
    <string name="engage_park_brake">Engage the parking brake</string>
    <string name="close_headlamp">Close headlamps</string>
    <string name="windows_reminder">Close the windows, then click here</string>
    <string name="infotainment_reminder">Close the infotainment systems (Radio, mp3 player, etc.), then click here</string>
    <string name="close_ignition">Turn off the ignition</string>
    <string name="stuff_reminder">Pick up your stuff(wallet etc.), then click here</string>
    <string name="door_lock_reminder">Don\'t forget to lock your car after stepping out!\nYou can end your trip by clicking anywhere</string>

</resources>
