<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.openxc.openxcstarter.FinisherActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/park_brake"
        android:background="@android:color/transparent"
        android:text="@string/engage_park_brake"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/headlamp"
        android:background="@android:color/transparent"
        android:text="@string/close_headlamp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/button_windows"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:text="@string/windows_reminder"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/button_infotainment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:text="@string/infotainment_reminder"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

</android.support.constraint.ConstraintLayout>
